--- a/.github/pull.yml
+++ b/.github/pull.yml
@@ -1,7 +1,7 @@
 version: "1"
 rules:
   - base: master
-    upstream: squidfunk/mkdocs-material:master
+    upstream: squidfunk:master
     mergeMethod: rebase
     mergeUnstable: false
     assignees:
