--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,9 +63,15 @@ jobs:
         run: |
           npm run build
           git diff --name-only
-          git_hash=$(git rev-parse --short "$GITHUB_SHA")
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add .
-          git commit -m "build-${git_hash}"
-          git push
+          if [[ `git status --porcelain` ]]; then
+            echo "Changes detected, pushing ${git_hash} to master"
+            git_hash=$(git rev-parse --short "$GITHUB_SHA")
+            git config user.name github-actions
+            git config user.email github-actions@github.com
+            git add .
+            git commit -m "build-${git_hash}"
+            git push
+          else
+            echo "No changes, skipping push"
+          fi
+          
